--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
-
+title: LabP2D
+description: Laboratório de Processamento Paralelo e Distribuído
+show_downloads: false
+google_analytics: 
+remote_theme: pages-themes/merlot@v0.2.0
+plugins:
+  - jekyll-remote-theme 
+gem "github-pages", group: :jekyll_plugins
