--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: LabP2D
 description: Laboratório de Processamento Paralelo e Distribuído
-show_downloads: false
+show_downloads: true
 google_analytics: 
 theme: jekyll-theme-merlot
