--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: LabP2D
 description: Laboratório de Processamento Paralelo e Distribuído
 show_downloads: true
 google_analytics: 
-theme: jekyll-theme-merlot
+theme: jekyll-theme-midnight
